--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,20 @@
     "activeTab",
     "tabs",
     "<all_urls>",
-    "storage"
+    "storage",
+    "downloads" 
   ],
   "background": {
     "scripts": ["background.js"]
   },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_icon": "icons/icon.png"
-  }
+    "default_icon": "icon.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
 }
